@@ -5,15 +5,16 @@ import com.example.demo.dto.PostDto;
 import com.example.demo.entity.*;
 import com.example.demo.repo.*;
 
-import jakarta.transaction.Transactional;
-
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.regex.*;
 import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class PostServiceImpl implements PostService {
 
     private final PostRepository postRepository;
@@ -24,6 +25,7 @@ public class PostServiceImpl implements PostService {
     private final LikeRepository likeRepository;
     private final CommentRepository commentRepository;
     private final NotificationService notificationService;
+    private final AnalyticsService analyticsService;
 
     public PostServiceImpl(PostRepository postRepository,
                            HashtagRepository hashtagRepository,
@@ -32,7 +34,8 @@ public class PostServiceImpl implements PostService {
                            FollowRepository followRepository,
                            LikeRepository likeRepository,
                            CommentRepository commentRepository,
-                           NotificationService notificationService) {
+                           NotificationService notificationService,
+                           AnalyticsService analyticsService) {
 
         this.postRepository = postRepository;
         this.hashtagRepository = hashtagRepository;
@@ -42,15 +45,19 @@ public class PostServiceImpl implements PostService {
         this.likeRepository = likeRepository;
         this.commentRepository = commentRepository;
         this.notificationService = notificationService;
+        this.analyticsService = analyticsService;
     }
 
-    // ================= CREATE POST =================
+    // =========================================================
+    // CREATE POST (Controller Compatible)
+    // =========================================================
 
     @Override
-    public void createPost(String username,
-                           String content,
-                           String hashtags,
-                           String scheduledAt) {
+    public void createPost(String username, String content, String hashtags, String scheduledAt) {
+        createPost(username, content, scheduledAt);
+    }
+
+    public void createPost(String username, String content, String scheduledAt) {
 
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
@@ -58,112 +65,75 @@ public class PostServiceImpl implements PostService {
         Post post = new Post();
         post.setContent(content);
         post.setUser(user);
-
-        post.setPinned(false);
-        post.setPinnedAt(null);
-
-        // Always set created time as now
         post.setCreatedAt(LocalDateTime.now());
+        post.setPinned(false);
 
-        // If scheduled time exists → save it in scheduledAt column
         if (scheduledAt != null && !scheduledAt.isBlank()) {
-
-            LocalDateTime scheduledDateTime =
-                    LocalDateTime.parse(scheduledAt);
-
-            post.setScheduledAt(scheduledDateTime);
-
-        } else {
-            post.setScheduledAt(null);
+            post.setScheduledAt(LocalDateTime.parse(scheduledAt));
         }
 
-        postRepository.save(post);
+        Post savedPost = postRepository.save(post);
 
-        // Save hashtags
-        saveHashtags(post, hashtags);
+        // analytics row
+        analyticsService.createPostAnalytics(savedPost);
+
+        // auto hashtags
+        parseHashtags(savedPost, content);
     }
 
-    // ================= UPDATE POST =================
+    // =========================================================
+    // UPDATE POST
+    // =========================================================
 
     @Override
     public void updatePost(Long postId, String content, String hashtags, String username) {
 
         Post post = postRepository.findById(postId)
-                .orElseThrow();
+                .orElseThrow(() -> new RuntimeException("Post not found"));
 
-        if (!post.getUser().getUsername().equals(username)) {
+        if (!post.getUser().getUsername().equals(username))
             throw new RuntimeException("You cannot edit this post");
-        }
 
         post.setContent(content);
         postRepository.save(post);
 
-        // remove old hashtags
+        // re-parse hashtags
         postHashtagRepository.deleteByPost(post);
-
-        // save new hashtags
-        saveHashtags(post, hashtags);
+        parseHashtags(post, content);
     }
 
-    // ================= DELETE POST =================
+    // =========================================================
+    // DELETE POST
+    // =========================================================
+
     @Override
-    @Transactional
     public void deletePost(Long postId, String username) {
 
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new RuntimeException("Post not found"));
 
-        // Security check
-        if (!post.getUser().getUsername().equals(username)) {
-            throw new RuntimeException("You are not authorized to delete this post");
-        }
+        if (!post.getUser().getUsername().equals(username))
+            throw new RuntimeException("You cannot delete this post");
 
-        // Just delete post
+        analyticsService.deleteAnalytics(postId);
         postRepository.delete(post);
     }
 
-    // ================= SHARE POST =================
-
-    @Override
-    public void sharePost(Long postId, String username) {
-
-        User currentUser = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        Post originalPost = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
-
-        Post sharedPost = new Post();
-        sharedPost.setContent("🔁 Shared from @" 
-                + originalPost.getUser().getUsername()
-                + "\n\n" + originalPost.getContent());
-        sharedPost.setCreatedAt(LocalDateTime.now());
-        sharedPost.setUser(currentUser);
-
-       
-        sharedPost.setPinned(false);
-        sharedPost.setPinnedAt(null);
-
-        postRepository.save(sharedPost);
-
-        
-    }
-    // ================= TOGGLE LIKE =================
+    // =========================================================
+    // LIKE / UNLIKE
+    // =========================================================
 
     @Override
     public void toggleLike(Long postId, String username) {
 
-        User user = userRepository.findByUsername(username)
-                .orElseThrow();
+        User user = userRepository.findByUsername(username).orElseThrow();
+        Post post = postRepository.findById(postId).orElseThrow();
 
-        Post post = postRepository.findById(postId)
-                .orElseThrow();
+        Optional<Like> existing = likeRepository.findByUserAndPost(user, post);
 
-        Optional<Like> existingLike =
-                likeRepository.findByUserAndPost(user, post);
-
-        if (existingLike.isPresent()) {
-            likeRepository.delete(existingLike.get());
+        if (existing.isPresent()) {
+            likeRepository.delete(existing.get());
+            analyticsService.decrementLikes(postId);
         } else {
 
             Like like = new Like();
@@ -171,164 +141,257 @@ public class PostServiceImpl implements PostService {
             like.setPost(post);
             likeRepository.save(like);
 
+            analyticsService.incrementLikes(postId);
+
             if (!post.getUser().getUsername().equals(username)) {
                 notificationService.createNotification(
                         post.getUser().getUsername(),
                         username,
                         "LIKE",
-                        post.getId()
+                        postId
                 );
             }
         }
     }
 
-    // ================= GET POST BY ID =================
+    // =========================================================
+    // SHARE
+    // =========================================================
 
     @Override
-    public PostDto getPostById(Long postId, String currentUsername) {
+    public void sharePost(Long postId, String username) {
 
-        User currentUser = userRepository.findByUsername(currentUsername)
-                .orElseThrow();
+        User currentUser = userRepository.findByUsername(username).orElseThrow();
+        Post originalPost = postRepository.findById(postId).orElseThrow();
 
-        Post post = postRepository.findById(postId)
-                .orElseThrow();
+        Post shared = new Post();
+        shared.setContent("🔁 Shared from @" + originalPost.getUser().getUsername()
+                + "\n\n" + originalPost.getContent());
+        shared.setUser(currentUser);
+        shared.setCreatedAt(LocalDateTime.now());
 
-        return map(post, currentUser);
+        postRepository.save(shared);
+
+        analyticsService.incrementShares(postId);
+
+        if (!originalPost.getUser().getUsername().equals(username)) {
+            notificationService.createNotification(
+                    originalPost.getUser().getUsername(),
+                    username,
+                    "SHARE",
+                    postId
+            );
+        }
     }
 
-    // ================= SEARCH BY HASHTAG =================
-    @Override
-    public List<PostDto> searchPostsByHashtag(String tag, String username) {
-
-        User currentUser = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        List<Post> posts =
-                postRepository
-                .findByPostHashtags_Hashtag_NameAndCreatedAtLessThanEqualOrderByCreatedAtDesc(
-                        tag,
-                        LocalDateTime.now()
-                );
-
-        return posts.stream()
-                .map(post -> map(post, currentUser))
-                .toList();
-    }
-
-    // ================= USER POSTS =================
-
-    @Override
-    public List<PostDto> getUserPosts(String username) {
-
-        User currentUser = userRepository.findByUsername(username)
-                .orElseThrow();
-
-        return postRepository.findByUserAndCreatedAtLessThanEqualOrderByPinnedDescCreatedAtDesc(
-                currentUser,
-                LocalDateTime.now()
-        )
-                .stream()
-                .map(post -> map(post, currentUser))
-                .collect(Collectors.toList());
-    }
-
-    // ================= ALL POSTS =================
-
-    @Override
-    public List<PostDto> getAllPosts() {
-
-        return postRepository.findAllByCreatedAtLessThanEqualOrderByCreatedAtDesc(
-                LocalDateTime.now()
-        )
-                .stream()
-                .map(post -> map(post, post.getUser()))
-                .collect(Collectors.toList());
-    }
-
-    // ================= FEED =================
+    // =========================================================
+    // FEED
+    // =========================================================
 
     @Override
     public List<PostDto> getFeedPosts(String username) {
 
-        User currentUser = userRepository.findByUsername(username)
-                .orElseThrow();
+        User currentUser = userRepository.findByUsername(username).orElseThrow();
 
-        List<User> followedUsers = followRepository
-                .findByFollower(currentUser)
+        List<User> followedUsers = followRepository.findByFollower(currentUser)
                 .stream()
                 .map(Follow::getFollowing)
-                .collect(Collectors.toList());
+                .toList();
 
         List<User> feedUsers = new ArrayList<>(followedUsers);
         feedUsers.add(currentUser);
 
-        return postRepository
-                .findFeedPosts(feedUsers, LocalDateTime.now())
+        return postRepository.findFeedPosts(feedUsers, LocalDateTime.now())
                 .stream()
-                .map(post -> map(post, currentUser))
+                .map(post -> {
+                    analyticsService.recordView(post.getId(), currentUser.getId());
+                    return map(post, currentUser);
+                })
                 .toList();
     }
 
-    // ================= DTO MAPPER =================
+    // =========================================================
+    // GET POST BY ID
+    // =========================================================
+
+    @Override
+    public PostDto getPostById(Long postId, String currentUsername) {
+
+        User currentUser = userRepository.findByUsername(currentUsername).orElseThrow();
+        Post post = postRepository.findById(postId).orElseThrow();
+
+        return map(post, currentUser);
+    }
+
+    // =========================================================
+    // USER POSTS
+    // =========================================================
+
+    @Override
+    public List<PostDto> getUserPosts(String username) {
+
+        User user = userRepository.findByUsername(username).orElseThrow();
+
+        return postRepository
+                .findByUserAndCreatedAtLessThanEqualOrderByPinnedDescCreatedAtDesc(user, LocalDateTime.now())
+                .stream()
+                .map(post -> map(post, user))
+                .toList();
+    }
+
+    // =========================================================
+    // ALL POSTS
+    // =========================================================
+
+    @Override
+    public List<PostDto> getAllPosts() {
+
+        return postRepository
+                .findAllByCreatedAtLessThanEqualOrderByCreatedAtDesc(LocalDateTime.now())
+                .stream()
+                .map(post -> map(post, post.getUser()))
+                .toList();
+    }
+
+    // =========================================================
+    // PIN / UNPIN
+    // =========================================================
+
+    @Override
+    public void pinPost(Long postId, String username) {
+
+        Post post = postRepository.findById(postId).orElseThrow();
+
+        if (!post.getUser().getUsername().equals(username))
+            throw new RuntimeException("You cannot pin this post");
+
+        post.setPinned(true);
+        post.setPinnedAt(LocalDateTime.now());
+        postRepository.save(post);
+    }
+
+    @Override
+    public void unpinPost(Long postId, String username) {
+
+        Post post = postRepository.findById(postId).orElseThrow();
+
+        if (!post.getUser().getUsername().equals(username))
+            throw new RuntimeException("You cannot unpin this post");
+
+        post.setPinned(false);
+        post.setPinnedAt(null);
+        postRepository.save(post);
+    }
+
+    // =========================================================
+    // SEARCH
+    // =========================================================
+
+    @Override
+    public List<PostDto> searchPostsByHashtag(String tag, String username) {
+
+        User user = userRepository.findByUsername(username).orElseThrow();
+
+        return postRepository
+                .findByPostHashtags_Hashtag_NameAndCreatedAtLessThanEqualOrderByCreatedAtDesc(
+                        tag.toLowerCase(), LocalDateTime.now())
+                .stream()
+                .map(post -> map(post, user))
+                .toList();
+    }
+
+    @Override
+    public List<PostDto> searchPostsByContent(String keyword, String username) {
+
+        User user = userRepository.findByUsername(username).orElseThrow();
+
+        return postRepository
+                .findAllByCreatedAtLessThanEqualOrderByCreatedAtDesc(LocalDateTime.now())
+                .stream()
+                .filter(p -> p.getContent() != null &&
+                        p.getContent().toLowerCase().contains(keyword.toLowerCase()))
+                .map(p -> map(p, user))
+                .toList();
+    }
+
+    // =========================================================
+    // TRENDING HASHTAGS
+    // =========================================================
+
+    @Override
+    public List<String> getTrendingHashtags() {
+
+        Map<String, Integer> count = new HashMap<>();
+
+        for (Post post : postRepository.findAll()) {
+            for (PostHashtag ph : post.getPostHashtags()) {
+                String tag = ph.getHashtag().getName();
+                count.put(tag, count.getOrDefault(tag, 0) + 1);
+            }
+        }
+
+        return count.entrySet()
+                .stream()
+                .sorted((a,b)->b.getValue()-a.getValue())
+                .limit(10)
+                .map(Map.Entry::getKey)
+                .toList();
+    }
+
+    // =========================================================
+    // DTO MAPPER
+    // =========================================================
 
     private PostDto map(Post post, User currentUser) {
 
         PostDto dto = new PostDto();
+
         dto.setId(post.getId());
         dto.setContent(post.getContent());
         dto.setCreatedAt(post.getCreatedAt());
         dto.setUsername(post.getUser().getUsername());
 
         dto.setLikeCount(likeRepository.countByPost(post));
-        dto.setLikedByCurrentUser(
-                likeRepository.findByUserAndPost(currentUser, post).isPresent()
-        );
+        dto.setLikedByCurrentUser(likeRepository.findByUserAndPost(currentUser, post).isPresent());
 
-        dto.setHashtags(
-                post.getPostHashtags()
-                        .stream()
-                        .map(ph -> ph.getHashtag().getName())
-                        .collect(Collectors.toList())
-        );
-
-        List<CommentDto> commentDtos = commentRepository
-                .findByPostOrderByCreatedAtAsc(post)
+        dto.setComments(commentRepository.findByPostOrderByCreatedAtAsc(post)
                 .stream()
-                .map(comment -> {
+                .map(c -> {
                     CommentDto cd = new CommentDto();
-                    cd.setId(comment.getId());
-                    cd.setUsername(comment.getUser().getUsername());
-                    cd.setContent(comment.getContent());
-                    cd.setCreatedAt(comment.getCreatedAt());
-                    cd.setOwnedByCurrentUser(
-                            comment.getUser().getUsername()
-                                    .equals(currentUser.getUsername())
-                    );
+                    cd.setId(c.getId());
+                    cd.setUsername(c.getUser().getUsername());
+                    cd.setContent(c.getContent());
+                    cd.setCreatedAt(c.getCreatedAt());
+                    cd.setOwnedByCurrentUser(c.getUser().getUsername().equals(currentUser.getUsername()));
                     return cd;
-                })
-                .collect(Collectors.toList());
+                }).toList());
 
-        dto.setComments(commentDtos);
+        PostAnalytics analytics = analyticsService.getAnalyticsByPostId(post.getId());
+
+        if (analytics != null) {
+            dto.setTotalComments(analytics.getTotalComments());
+            dto.setTotalShares(analytics.getTotalShares());
+            dto.setReachCount(analytics.getReachCount());
+            dto.setEngagementRate(analytics.getEngagementRate());
+        }
 
         return dto;
     }
 
-    // ================= SAVE HASHTAGS =================
+    // =========================================================
+    // HASHTAG PARSER
+    // =========================================================
 
-    private void saveHashtags(Post post, String hashtags) {
+    private void parseHashtags(Post post, String content) {
 
-        if (hashtags == null || hashtags.isBlank()) return;
+        Pattern pattern = Pattern.compile("#(\\w+)");
+        Matcher matcher = pattern.matcher(content);
 
-        String[] tags = hashtags.split(",");
+        while (matcher.find()) {
 
-        for (String rawTag : tags) {
+            String tag = matcher.group(1).toLowerCase();
 
-            String tag = rawTag.trim().replace("#", "").toLowerCase();
-
-            if (tag.isEmpty()) continue;
-
-            Hashtag hashtag = hashtagRepository
-                    .findByName(tag)
+            Hashtag hashtag = hashtagRepository.findByName(tag)
                     .orElseGet(() -> {
                         Hashtag newTag = new Hashtag();
                         newTag.setName(tag);
@@ -338,95 +401,7 @@ public class PostServiceImpl implements PostService {
             PostHashtag ph = new PostHashtag();
             ph.setPost(post);
             ph.setHashtag(hashtag);
-
             postHashtagRepository.save(ph);
         }
     }
-
-    @Override
-    public void pinPost(Long postId, String username) {
-
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
-
-        // Only owner can pin
-        if (!post.getUser().getUsername().equals(username)) {
-            throw new RuntimeException("You cannot pin this post");
-        }
-
-        post.setPinned(true);
-        post.setPinnedAt(LocalDateTime.now());
-
-        postRepository.save(post);
-    }
-	
-
-    @Override
-    public void unpinPost(Long postId, String username) {
-
-        Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
-
-        // Only owner can unpin
-        if (!post.getUser().getUsername().equals(username)) {
-            throw new RuntimeException("You cannot unpin this post");
-        }
-
-        post.setPinned(false);
-        post.setPinnedAt(null);
-
-        postRepository.save(post);
-    }
-
-    @Override
-    public List<String> getTrendingHashtags() {
-
-        List<Post> posts = postRepository.findAll();
-
-        Map<String, Integer> countMap = new HashMap<>();
-
-        for (Post post : posts) {
-
-            for (PostHashtag ph : post.getPostHashtags()) {
-
-                String tagName = ph.getHashtag().getName();
-
-                countMap.put(tagName,
-                        countMap.getOrDefault(tagName, 0) + 1);
-            }
-        }
-
-        return countMap.entrySet()
-                .stream()
-                .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
-                .map(Map.Entry::getKey)
-                .limit(10)
-                .toList();
-    }
-    
-   
-    @Override
-    public List<PostDto> searchPostsByContent(String keyword, String username) {
-
-        User currentUser = userRepository.findByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        List<Post> posts =
-                postRepository
-                .findAllByCreatedAtLessThanEqualOrderByCreatedAtDesc(
-                        LocalDateTime.now()
-                );
-
-        return posts.stream()
-                .filter(post ->
-                        post.getContent() != null &&
-                        post.getContent().toLowerCase()
-                                .contains(keyword.toLowerCase()))
-                .map(post -> map(post, currentUser))
-                .toList();
-    }
-   
-    
 }
- 
-
